[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wallet-xray"
version = "0.1.0"
description = "One-command Polymarket wallet strategy profiler. Pulls a wallet's full BTC/ETH/SOL/XRP UpDown activity, prints a Markdown report, and saves a structured JSON to feed any LLM for strategy analysis."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "wallet-xray contributors" }
]
keywords = ["polymarket", "prediction-markets", "wallet-analysis", "trading-strategy", "crypto"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[project.scripts]
wallet-xray = "wallet_xray.cli:main"

[project.urls]
Homepage = "https://github.com/eason4kim-rocket/wallet-xray"
Issues = "https://github.com/eason4kim-rocket/wallet-xray/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]
